manifests/backend/camunda/state/05-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: platform
  name: camunda-bpm-depl
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: platform
  strategy:
    rollingUpdate:
      maxUnavailable: "1%"
  template:
    metadata:
      labels:
        app.kubernetes.io/app: camunda-bpm
        app.kubernetes.io/component: platform
    spec:
      containers:
      - env:
        - name: DB_DRIVER
          valueFrom:
            configMapKeyRef:
              key: DB_DRIVER
              name: camunda-env
        - name: DB_URL
          valueFrom:
            configMapKeyRef:
              key: DB_URL
              name: camunda-env
        - name: DB_USERNAME
          valueFrom:
            configMapKeyRef:
              key: DB_USERNAME
              name: camunda-env
        - name: DB_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: DB_PASSWORD
              name: camunda-env
        image: docker.xc-lab.io/camunda-bpm
        name: camunda-bpm
        livenessProbe:
          httpGet:
            path: /camunda
            port: http
          initialDelaySeconds: 60
          periodSeconds: 15
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 9404
          name: metrics
        readinessProbe:
          httpGet:
            path: /camunda
            port: http
          initialDelaySeconds: 10
          periodSeconds: 15
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 300m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
        volumeMounts:
        - mountPath: /etc/config/
          name: config
      volumes:
      - configMap:
          defaultMode: 484
          name: config-f876fcdt56
        name: config
