manifests/backend/camunda/state/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: platform
  name: camunda-svc
spec:
  ports:
  - name: camunda-port
    port: 8080
    targetPort: http
  selector:
    app.kubernetes.io/component: platform
  type: ClusterIP
